bpo-41064: Improve syntax error for invalid usage of '**' in f-strings (GH-25006)